# VectorBase

./: .dockerignore  .gitignore  BENCHMARK_REPORT.md  Dockerfile  README.md  bench_final.txt  benchmark_output.txt  build_cpp.py  docker-compose.distributed.yml  docker-compose.yml  process_data.py  project_roadmap.md  pyproject.toml  quick_bench.py  requirements.txt  results.txt  run_production.bat  setup.py  test_output.txt  test_output_final.txt
..bfg-report/2025-11-21/21-07-50/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2025-11-21/21-07-50/protected-dirt/: 4814e5cc-HEAD.csv
.github/workflows/: ci.yml  test.yml
api/: config.py  models.py  server.py  server_main.py
data/processed/: bench_vectors.npy  citation_graph.json  vectors.npy
data/raw/: papers.json
data/sharded/: shard_0.npy  shard_1.npy  shard_2.npy
distributed/: coordinator.py  worker.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js  CitationGraph.js
market-data-handler/src/: message_parser.cpp  message_parser.h  order_book.cpp  order_book.h
minivector/: binary_engine.py  embedder.py  minivector_core.cp312-win_amd64.pyd  vector_store.py
minivector_cpp/: CMakeLists.txt  bindings.cpp  core.cpp  core.hpp
scripts/: add_urls.py  benchmark.py  benchmark_binary.py  benchmark_llm.py  benchmark_search.py  benchmark_simd.py  benchmark_throughput.py  build_citation_graph.py  build_index.py  check_metadata.py  download_data.py  download_data_arxiv.py  final_benchmark_suite.py  fix_metadata.py  generate_embeddings.py  load_test.py  real_world_bench.py  run_local_cluster.py  split_data.py  test_distributed.py
tests/: test_engine.py  test_graph_endpoint.py  test_ollama.py  test_ranking.py  test_search.py
