[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.10.0", "cmake>=3.15"]
build-backend = "setuptools.build_meta"

[project]
name = "minivector"
version = "0.2.0"
description = "High-Performance Hybrid Python/C++ Vector Search Engine with SIMD Acceleration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "MiniVector Team"}
]
keywords = [
    "vector-search",
    "simd",
    "avx",
    "hnsw",
    "embedding",
    "similarity-search",
    "machine-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Database Engines/Servers",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "pybind11>=2.10.0",
]
full = [
    "sentence-transformers>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/gentialiaj411/vectorbase"
Repository = "https://github.com/gentialiaj411/vectorbase"

[tool.setuptools]
packages = ["minivector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

